# dotfiles

./: .gitattributes  .gitconfig  .gitignore  LICENSE  NOTES.org  README.md  TODO.md  alacritty  auto-install  awake  borg  default.nix  doom  dotfiles  emacs  fish  flake.nix  git  hammerspoon  haskell  helix  home.nix  install  install.hs  install.rkt  install.ts  kakoune  karabiner  kitty  link  macos  mercurial  neovim  nix  nixos  nixpkgs.nix  overlay.nix  shell.nix  skhd  starship  (+10 more)
.config/fish/: config.fish  fishfile
.config/nvim/: init.vim
.github/workflows/: ci.yml
.hammerspoon/: init.lua
_install/: install.hs  install.ts
_nixos/: configuration.nix  install  new.nix
_systemd/: physlock.service
_vscode/: settings.json
_yi/: .gitignore  package.yaml  stack.yaml
alacritty/.config/: alacritty.yml
archived/systemd/: borg-backup.service  install
bash/: .bash_profile  .bashrc
cabal/.cabal/: config
chromium/.config/: chromium-flags.conf
chunkwm/: .chunkwmrc
compton/.config/: compton.conf
configs/: install-nixos-vmware  janetfmt
configs/awake/: .bash_profile
configs/fish/: after-hook
configs/haskell/: .haskeline
configs/installer/haskell/: default.nix  installer.cabal
configs/installer/haskell/src/: Main.hs
configs/kakoune/: after-hook
configs/lima/: nixos-template.yaml
configs/macos/: after-hook
configs/neovim/: after-hook
configs/tmux/: after-hook
configs/xorg/: .xinitrc
configs/zsh/: .zshrc
docs/: bootstrap.md  kakoune-keys-all.asciidoc  kakoune-keys-unlearned.asciidoc  lima.md  macos-hostname.md  nixos-vm.md  secretive.md
doom/: after-hook  before-hook
doom-emacs/.doom.d/: config.el  init.el  packages.el
doom-emacs/.emacs.d/: init.el
editorconfig/: .editorconfig
emacs/: .emacs  .emacs~  after-hook  before-hook
emacs-spacemacs/: .spacemacs
emacs/.emacs.d/: init-appearance.el  init-everything.el  init-gui.el  (+4 more)
eslint/: .eslintrc.json
firefox/: README.md  install  userChrome.css
fish/: after-hook
ghci/: .ghci
git/: .gitconfig
hammerspoon/: after-hook
haskeline/: .haskeline
haskell/: .ghci
home/: common.nix
homebrew/: .Brewfile  Brewfile  after-hook  install
installer/: Main.hs  default.nix  installer.cabal
kakoune/: after-hook
lib/: import-directory-attrs.nix  import-directory-list.nix
mercurial/: .hgrc
modules/: default.nix
mpd/: init
neovim/: after-hook  before-hook
nix/: after-hook  before-hook
nixos/: after-hook  azure-vm.nix  configuration.nix  git-rev.nix  indigo-vm.nix  install  vm.nix
overlays/: bash.nix  container-images.nix  darwin-configurations.nix  default.nix  evan.nix  fish-plugins.nix  fonts.nix  haskell.nix  home-configurations.nix  kakoune-plugins.nix  nixos-configurations.nix  nixos-images.nix  nixos-isos.nix  packages.nix  patch-home-manager.nix  pkgs.nix  roc.nix  rust.nix  shell.nix  top-level.nix
patches/: home-manager-kitty.patch  home-manager-tmux.patch
skhd/: .skhdrc
spacemacs/: .spacemacs
src/: Cargo.toml
src/evanrelf-prompt/: Cargo.toml
src/evanrelf-prompt/src/: main.rs
stalonetray/: .stalonetrayrc
sway/: .Xdefaults
systemd/: borg-backup.service  borg-backup.timer  i3lock@.service  install  keyswap.service  physlock.service  physlock@.service  powertop.service  tarsnap-backup.service  tarsnap-backup.timer
tmux/: .tmux.conf  after-hook
vscode/: install  keybindings.json  settings.json
xmobar/: .xmobarrc
xmonad/.xmonad/: .gitignore  build  default.nix  ghcid  my-xmonad.cabal  package.yaml  polybar.sh  shell.nix  stack.yaml  xmobar.hs  xmonad-old.hs  xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs
xmonad/.xmonad/my-xmonad/: default.nix  my-xmonad.cabal  xmonad.hs
xorg/: .Xresources  .xinitrc  .xprofile
yi/: .gitignore  README.md  my-yi.cabal  package.yaml  yi.cabal
yi/src/: Main.hs
zsh/: .zshrc
(+627 files in other folders)
