cabal-version: 2.0

name:       my-yi
version:    0.0.0.0
build-type: Simple

executable my-yi
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.11 && < 4.12
    , microlens-platform
    , mtl
    , yi-core
    , yi-frontend-vty
    , yi-keymap-vim
    , yi-mode-haskell
  default-extensions:
    LambdaCase
    NamedWildCards
    OverloadedStrings
    RecordWildCards
    TypeApplications
  ghc-options:
    -Wall
    -Wextra
    -Wcompat
    -Werror=missing-fields
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language: Haskell2010
